Zamiast push zrobilem w nocy pull...

--- a/thesis/08Wnioski.tex
+++ b/thesis/08Wnioski.tex
@@ -1,6 +1,7 @@
 \chapter{Zebrane doświadczenia}
 \label{Chapter8}
 
+%Tu wbijamy doświadczenia - czyli czegośmy się nauczyli. Każdy item powinien mieć do siebie min. jedno zdanie uzasadnienia / przykładu.
 Podczas pracy zebraliśmy następujące doświadczenia bezpośrednio związane z zastosowanymi technologiami:
 \begin{itemize}
 \item Implementowanie testów jednostkowych z użyciem PHPUnit -- w celu kontroli poprawności pisanego kodu back-end'u w języku PHP,
@@ -21,12 +22,28 @@ Podczas pracy zebraliśmy następujące doświadczenia bezpośrednio związane z
 \item Projektowanie testów akceptacyjnych z użyciem Selenium IDE,
 \item Implementowanie formularzy z wykorzystaniem JavaScript,
 \end{itemize}
+%Tu kończymy wbijać doświadczenia.
 
+%Poniżej wrzucamy jakiś opis do tych doświadczeń. Takie jakby podsumowanie ich w formie zdaniowej.
 Bardzo istotna cześć doświadczeń związanych z projektem wiąże się z pracą zespołową.
 Nauczyliśmy się, że dobrego członka zespołu wyróżnia: sumienność, punktualność, odpowiedzialność, dokładność, terminowość, prawdomówność, uczciwość, asertywność, zdolność kreatywnego myślenia, kultura bycia oraz komunikatywność. Praca w grupie nad dużym projektem wymaga dobrej koordynacji prac. Dostępność architekta i kierownika projektu znacząco ułatwiła pracę nad projektem. Dzięki podziałowi zadań, każdy członek zespołu mógł pogłębić swoje zainteresowania. Wraz z upływem każdy członek zespołu znalazł sobie zbiór typów zagadnień, które potrafił zrealizować szybciej i lepiej ze względu na wcześniej pozyskane doświadczenie. Uzyskane doświadczenia z pewnością przydadzą się nam w pracy zawodowej.
+%I kończymy te doświadczenia...
 
+%Tu zaczynamy bawić się we wnioski. Wymieniamy siebie i mówimy co nam się podobało, co nie, i w ogóle czego się spodziewaliśmy, jak to poszło, co sądzimy o SDS, itp. Można je tak jak jest niżej, wymieniać od myślników, można sobie wywalić pod nazwiskiem "itemize" i pobawić się w pisanie normalnego tekstu. Jeśli ktoś chce, może napisać co by zrobił, gdyby posiadając dzisiejszą wiedzę o tym projekcie i powiązanych z nim technologiach, znów miał wybrać tę pracę inżynierską. Jak by się to potoczyło? Co by zrobił, a czego nie? Jak mi starczy czasu to też taką rozkminę tu chyba dorzucę ;)
 Wnioski:
+\begin{description}
+\item Krzysztof Borowiak:
 \begin{itemize}
+\item ...
+\end{itemize}
+\item Maciej Trojan
+\begin{itemize}
+\item ...
+\end{itemize}
+\item Krzysztof Urbaniak:
+\begin{itemize}
+\item ...
+\end{itemize}
 \item Łukasz Wieczorek:
 \begin{itemize}
 \item Zatwierdzaj swoje zmiany (ang. \emph{commit}) dopiero, gdy funkcjonalność, którą miałeś zaimplementować, jest kompletna i przetestowana jednostkowo oraz akceptacyjnie,
@@ -40,4 +57,5 @@ Wnioski:
 \item Podstawą efektywnej pracy jest kontrola czasu poświęcanego na realizację przydzielonych zdań,
 \item Dobra komunikacja w zespole to podstawa sukcesu,
 \end{itemize}
-\end{itemize}
+\end{description}
+%I po robocie.
