--- a/thesis/09Zakonczenie.tex
+++ b/thesis/09Zakonczenie.tex
@@ -12,3 +12,4 @@
 
 {\color{red}Do uzupełnienia pod koniec prac.}
 %Być może system wymaga jakichś prac w przyszłości lub są jakieś propozycje rozszerzenia funkcjonalności. Dotyczy to zarówno tego, co być może sami będziecie dalej robić (jeśli Wam oczywiście zapłacą) lub mają po Was przejąć inne osoby (z następnymi rocznikami włącznie).
+%Innymi słowy, gdybanie co dalej.
