podsumowanie, zmiana w narzędziach

--- a/thesis/09Zakonczenie.tex
+++ b/thesis/09Zakonczenie.tex
@@ -5,11 +5,16 @@
 \label{Chapter91}
 
 {\color{red}Do uzupełnienia pod koniec prac.}
+Rozwijanie istniejącego oprogramowania wymaga dużo większego nakładu pracy niż konstrukcja oprogramowania od podstaw. Wiele czasu poświęca się na analizę rozwiązań zastosowanych przez twórców rozszerzanego rozwiązania. W trakcie implementacji pojawiają się problemy, których rozwiązania szuka się długimi godzinami; niektórych nie udaje się w ogóle rozwiązać, co z kolei prowadzi do modyfikacji czyjegoś oprogramowania (ang. \emph{hacking}). Praca nad oprogramowaniem, którego tworzenie zaczęło się przed ponad dziesięcioma laty, wymaga pracy z rozwiązaniami architektonicznymi, które dawno zostały już porzucone (np. \emph{transaction script} na rzecz \emph{Model View Controller}). Dodatkową trudnością są zmieniające się lub porzucane interfejsy programowania aplikacji. Wymienione problemy dotyczą szczególnie dużego oprogramowania, właśnie takiego z jakim przyszło nam pracować -- Moodle to wg programu CLOC ponad 2 miliony linii kodu. Uważamy, że decyzja odnośnie rozwijania systemu Moodle była błędna i nieprzemyślana, zwłaszcza w kontekście niedoświadczenia programistów. Potwierdzenie naszych wniosków widzimy chociażby porównując wydajność pracy zespołu w porównaniu z innymi zespołami realizującymi projekty w ramach Software Development Studio. Błędem było oparcie projektu o rozwiązanie nieznane dobrze architektowi i programistom. Czas poświęcony na pracę wejścia okazał się być znacznie wyższy niż oszacowany przez kierownika projektu.\\
+
+Możliwość współpracy z Software Development Studio była niewątpliwie zaletą. Po pierwsze, projekt, który należało wykonać był z naszej perspektywy bardzo złożony. Dzięki kierownikowi projektu oraz architektowi część pracy związana z projektowaniem i dokumentowaniem systemu nie obciążała programistów, pozwalając nam na koncentrację sił na implementacji systemu. Po drugie, wszystkie ewentualnie niedomówienia projektowe, będące przyczyną sporów programistów, były szybko rozwiązywane w ramach konsultacji z architektem. Po trzecie, udostępniony system Redmine znacząco ułatwia organizację pracy. Dzięki ,,śledzeniu zagadnień'' można lepiej organizować czas i przydział zdań. Pokój, w którym przyszło nam pracować był udogodnieniem, które dobrze wpłynęło na komunikację w zespole. Korzyścią wynikającą z zadanej nam organizacji pracy jest konieczność trzymania się terminów, dzięki której nasz ostatni semestr studiów inżynierskich był dobrze zaplanowany pod względem równomiernego rozkładu pracochłonności.\\
+
 %Podsumowanie powstałego systemu, czy przedsięwzięcie się udało, czy to się nadaje do czegokolwiek. Taki ładny epilog na koniec pracy inżynierskiej.
+Mamy nadzieję, że powstały system zostanie ciepło przyjęty zarówno przez studentów, absolwentów oraz prowadzących.\\
 
 \section{Propozycja dalszych prac}
 \label{Chapter92}
 
 {\color{red}Do uzupełnienia pod koniec prac.}
-%Być może system wymaga jakichś prac w przyszłości lub są jakieś propozycje rozszerzenia funkcjonalności. Dotyczy to zarówno tego, co być może sami będziecie dalej robić (jeśli Wam oczywiście zapłacą) lub mają po Was przejąć inne osoby (z następnymi rocznikami włącznie).
-%Innymi słowy, gdybanie co dalej.
+%Być może system wymaga jakichś prac w przyszłości lub są jakieś propozycje rozszerzenia funkcjonalności. Dotyczy to zarówno tego, co być może sami będziecie dalej robić (jeśli Wam oczywiście zapłacą) lub mają po Was przejąć inne osoby (z następnymi rocznikami włącznie). Innymi słowy, gdybanie co dalej.
+Podczas spotkania z reprezentantami Działu Rozwoju Oprogramowania poruszony został temat etykietowania (ang. \emph{tag}) badań. Proponowany mechanizm z pewnością usprawniłby proces wyszukiwania badań. W obecnej wersji systemu zachętą dla studentów do wypełniania ankiet są materiały publikowane przez wykładowców uczelni, do których dostęp przyznawany jest użytkownikom, którzy w określonym czasie udzielili odpowiedzi w dowolnym badaniu. W przyszłości mechanizm ten można by rozbudować o wirtualną walutę służącą do ,,wykupowania'' dostępu do publikowanych materiałów.
