--- a/thesis/10Dodatki.tex
+++ b/thesis/10Dodatki.tex
@@ -142,7 +142,8 @@ Numery w nawiasach w poniższej liście oznaczają numer wersji.
 \item BASH (4.2.37)
 \item Check Point's Linux SNX (800007027)
 \item Chrome (24.0)
-\item cron (3.0)
+\item CLOC (1.56)
+\item CRON (3.0)
 \item Eclipse IDE (3.7.2)
 \item FastStone Capture (5.3)
 \item Git (1:1.7.10.4)
