--- a/thesis/08Wnioski.tex
+++ b/thesis/08Wnioski.tex
@@ -42,7 +42,11 @@ Wnioski:
 \end{itemize}
 \item Krzysztof Urbaniak:
 \begin{itemize}
-\item ...
+\item Kluczem do sprawnej pracy jest dobra organizacja zasobów. System \emph{Redmine} bardzo pomagał w odpowiednim przydzieleniu zadań do osób tak, aby projekt skończyć w określonym czasie.
+\item Wspólna praca zespołu w jednym pokoju wpływa na większą świadomość jego członków w postępie prac. Przekłada się to na przykład na szybsze znajdowanie błędów, czy zbiorowe rozwiązywanie większych problemów.
+\item Linux jest o wiele lepszym systemem operacyjnym do programowania niż Windows. Linux góruje ilością programów operujących na plikach tekstowych i łatwością pisania skryptów. Programista pracujący na systemie Linux ma poczucie, że wiele procesów można zautomatyzować, w przeciwieństwie do pracy na systemie Windows.
+\item Nie jest dobrym pomysłem wybieranie rozwiązań, o których ma się szczątkowe pojęcie. Lepiej jest wybrać pewne rozwiązania, nawet jeżeli wydaje się, że wymagają więcej zaangażowania.
+\item Wybór pracy inżynierskiej pod nadzorem zespołu SDS był dobrym pomysłem. Wsparcie architekta oraz analityka było bardzo przydatne, a nawet niezbędne do ukończenia pracy w terminie.
 \end{itemize}
 \item Łukasz Wieczorek:
 \begin{itemize}
