poprawa formy wniosków ŁW

--- a/thesis/08Wnioski.tex
+++ b/thesis/08Wnioski.tex
@@ -50,9 +50,9 @@ Wnioski:
 \end{itemize}
 \item Łukasz Wieczorek:
 \begin{itemize}
-\item Zatwierdzaj swoje zmiany (ang. \emph{commit}) dopiero, gdy funkcjonalność, którą miałeś zaimplementować, jest kompletna i przetestowana jednostkowo oraz akceptacyjnie,
-\item Przygotuj wcześniej logikę, z której będą korzystać programiści interfejsu, by nie opóźniać ich pracy,
-\item Jeśli nie wiesz, jak zaimplementować daną funkcjonalność zapytaj architekta -- zwykle dysponuje on większą wiedzą ogólną,
+\item Zmiany zatwierdza się (ang. \emph{commit}) dopiero, gdy funkcjonalność, którą należało zaimplementować, jest kompletna i przetestowana jednostkowo oraz akceptacyjnie,
+\item Warto przygotować wcześniej logikę, z której będą korzystać programiści interfejsu, by nie opóźniać ich pracy,
+\item W przypadku braku wiedzy odnośnie sposobu implementacji funkcjonalności najlepiej skonsultuj się z architektem -- zwykle dysponuje on większą wiedzą ogólną,
 \item Werbalizacja problemu bardzo często pomaga w jego rozwiązaniu,
 \item Wcześniejsza refaktoryzacja znacznie ułatwia dalszą pracę nad kodem,
 \item Wielokrotnie powtarzane fragmenty kodu należy jak najszybciej zrefaktoryzować, by uchronić się od poprawiania podobnych konstrukcji składniowych,
